Some changes - added html files to watch and ...

--- a/index.html
+++ b/index.html
@@ -6,16 +6,32 @@
 	<link rel="stylesheet" href="app/css/main.css">
 </head>
 <body>
+<nav class="navbar navbar-default navbar-static-top" >
+	<div class="container">
+		<div class="collapse navbar-collapse">
+			<ul class="nav navbar-nav">
+				<li><a href="#">Consectetur</a></li>
+				<li><a href="#">Adipisicing</a></li>
+				<li><a href="#">Nnumquam</a></li>
+			</ul>
+		</div>
+	</div>
+</nav>
 <div class="content">
+
 	<div class="main">
+		<h1>Lorem ipsum dolor sit amet, consectetur adipisicing.</h1>
 		<div class="one">
+			<h3>Consectetur adipisicing elit.</h3>
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias aliquam corporis est quas quo
 				repellendus.</p>
 
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor, error!</p>
 		</div>
 		<div class="two">
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias aliquam corporis est quas quo
+			<h3>Alias aliquam corporis.</h3>
+			<hr>
+			<p>Werem ipsum dolor sit amet, consectetur adipisicing elit. Alias aliquam corporis est quas quo
 				repellendus.</p>
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias aliquam corporis est quas quo
 				repellendus.</p>
@@ -25,7 +41,8 @@
 		</div>
 		<div class="sidebar">
 			<form action="" class="form">
-				<div><label for="">Itaque modi</label><input type="text"></div>
+				<h3>Quia quod similique.</h3>
+				<div><label for="">Itaque modi</label><input type="number"></div>
 				<div><label for="">Consectetur adipisicing</label><input type="text"></div>
 				<div><label for="">Odit officia</label><input type="text"></div>
 			</form>
